# riley_auth

./: .dirgrabignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  riley_auth.example.toml
.github/workflows/: ci.yml  release.yml
crates/riley-auth-api/: Cargo.toml
crates/riley-auth-api/src/: lib.rs  metrics.rs  rate_limit.rs  routes.rs  server.rs
crates/riley-auth-api/src/routes/: admin.rs  auth.rs  mod.rs  oauth_provider.rs
crates/riley-auth-api/tests/: admin.rs  auth.rs  integration.rs  metrics.rs  oauth.rs  oidc.rs  oidc_conformance.rs  redis_rate_limit.rs  webhooks.rs
crates/riley-auth-api/tests/common/: mod.rs
crates/riley-auth-cli/: Cargo.toml
crates/riley-auth-cli/src/: main.rs
crates/riley-auth-core/: Cargo.toml
crates/riley-auth-core/migrations/: 004_token_families.sql  006_oidc_nonce.sql  010_backchannel_logout.sql  012_auth_time.sql  013_backfill_auth_time.sql  015_reserved_usernames.sql
crates/riley-auth-core/src/: config.rs  db.rs  error.rs  jwt.rs  lib.rs  oauth.rs  webhooks.rs
crates/riley-auth-core/src/db/: auth_codes.rs  clients.rs  mod.rs  oauth_links.rs  tokens.rs  users.rs  webhooks.rs
docs/: deployment.md
migrations/: 001_initial_schema.sql  002_scopes_and_sessions.sql  003_webhooks.sql  004_token_families.sql  005_webhook_outbox.sql  007_outbox_status_check.sql  008_refresh_token_nonce.sql  009_consent_requests.sql  011_email_verified.sql  014_refresh_token_compound_index.sql
planning/: soul.md
planning/reviews/v1/: 01_review_round.md  02_fixes.md  03_review_round.md  04_fixes.md  05_review_round.md  06_fixes.md  07_review_round.md  08_fixes.md  09_review_round.md  10_fixes.md  11_review_round.md  12_fixes.md  13_review_round.md  14_fixes.md  15_review_round.md  16_fixes.md  17_review_round.md  18_review_round.md  19_review_round.md  20_fixes.md  21_review_round.md  22_review_round.md  review_notes_README.md
planning/reviews/v2/: 01_review_round.md  02_fixes.md  03_review_round.md  04_review_round.md  05_review_round.md  06_review_round.md  07_review_round.md  13_review_round.md  14_fixes.md  15_review_round.md  16_fixes.md  17_review_round.md  18_fixes.md  review_notes_README.md
planning/reviews/v3/: 01_review_round.md  02_fixes.md  03_review_round.md  04_fixes.md  05_review_round.md  06_fixes.md  07_review_round.md  08_review_round.md  09_fixes.md  10_review_round.md  11_fixes.md  12_review_round.md  13_review_round.md  14_fixes.md  15_review_round.md  16_fixes.md  17_review_round.md  18_review_round.md  19_review_round.md  20_review_round.md  21_fixes.md  22_review_round.md  23_review_round.md  24_review_round.md  review_notes_README.md
planning/reviews/v4/: 01_review_round.md  02_fixes.md  03_review_round.md  04_fixes.md  05_review_round.md  06_review_round.md  07_review_round.md  08_fixes.md  09_review_round.md  10_fixes.md  11_review_round.md  12_fixes.md  13_review_round.md  14_fixes.md  15_review_round.md  16_fixes.md  17_review_round.md  18_review_round.md  19_fixes.md  20_review_round.md  21_fixes.md  22_review_round.md  23_review_round.md  24_fixes.md  25_review_round.md  26_fixes.md  27_review_round.md  review_notes_README.md
planning/reviews/v5/: 01_review_round.md  02_fixes.md  03_review_round.md  04_fixes.md  05_review_round.md  06_fixes.md  07_review_round.md  08_review_round.md  09_fixes.md  10_review_round.md  11_review_round.md  12_fixes.md  13_review_round.md  14_review_round.md  15_fixes.md  16_review_round.md  17_review_round.md  18_review_round.md  19_fixes.md  20_review_round.md  21_fixes.md  22_review_round.md  23_review_round.md  24_fixes.md  25_review_round.md  26_fixes.md  review_notes_README.md
planning/reviews/v6/: 01_review_round.md  02_fixes.md  03_review_round.md  04_fixes.md  05_review_round.md  06_fixes.md  07_review_round.md  08_review_round.md  09_review_round.md  10_fixes.md  11_review_round.md  12_fixes.md  13_review_round.md  14_fixes.md  15_review_round.md  16_fixes.md  17_review_round.md  review_notes_README.md
planning/v1/: WORKFLOW_STATE.md  implementation_plan.md  plan.md
planning/v2/: WORKFLOW_STATE.md  architecture.md  implementation_plan.md
planning/v3/: WORKFLOW_STATE.md  architecture.md  implementation_plan.md
planning/v4/: WORKFLOW_STATE.md  architecture.md  implementation_plan.md
planning/v5/: WORKFLOW_STATE.md  architecture.md  implementation_plan.md  oidc_conformance_results.md
planning/v6/: WORKFLOW_STATE.md  architecture.md  implementation_plan.md
scripts/: test-integration.sh
