[package]
name = "riley-auth-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
riley-auth-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
cookie = "0.18"
regex = "1"
