[package]
name = "riley-auth-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
riley-auth-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
cookie = "0.18"
regex = "1"
sha2 = "0.10"
base64 = "0.22"
rand.workspace = true
hex = "0.4"
url.workspace = true
percent-encoding = "2"
reqwest.workspace = true
subtle = "2"
redis = { workspace = true, optional = true }

[features]
default = []
redis = ["dep:redis"]

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
tempfile = "3"
