[package]
name = "riley-auth-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "riley-auth"
path = "src/main.rs"

[dependencies]
riley-auth-core.workspace = true
riley-auth-api.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
sqlx.workspace = true
rand.workspace = true
hex = "0.4"
uuid.workspace = true
