[package]
name = "riley-auth-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
uuid.workspace = true
url.workspace = true
dirs.workspace = true
